--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <body>
   <div class="container">
     <h1>SITO IN COSTRUZIONE</h1>
+    <h1>per i tuoi progetti contattaci a</h1>
+    <h1>info@mast-vi.it</h1>
     <img src="assets/MAST_logo_2.0.png" alt="Sito in costruzione">
   </div>
 </body>
