--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1>SITO IN COSTRUZIONE ZC </h1>
     <h1>per i tuoi progetti contattaci a</h1>
     <h1>info@mast-vi.it</h1>
-    <img src="assets/MAST_logo_2.0.png" alt="Sito in costruzione">
+    <img src="assets/MAST_logo_2.0.png" 'alt="Sito in costruzione">
   </div>
 </body>
 </html>
