--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sito in costruzione</title>
+  <meta name="description" content="MAST è una startup che progetta, sviluppa e costruisce macchininari ad alto contenuto tecnologico. Contattaci: info@mast-vi.it">
+<meta name="robots" content="index, follow">
+
+  <title>MAST - Macchinari e soluzioni tecnologiche</title>
+
   <style>
     * {
       box-sizing: border-box;
