--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="description" content="MAST è una startup che progetta, sviluppa e costruisce macchininari ad alto contenuto tecnologico. Contattaci: info@mast-vi.it">
 <meta name="robots" content="index, follow">
 
+  <title>SITO IN COSTRUZIONE</title>
   <title>MAST - Macchinari e soluzioni tecnologiche</title>
+
 
   <style>
     * {
