--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
   <header>
     <div class="logo">
       <a href="Home.html">
-        <img src="logo.png" alt="Logo Azienda Mast-VI">
+        <img src="Assets/MAST_logo_2.0.png" alt="Logo Azienda Mast-VI">
       </a>
     </div>
     <nav>
