--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
       --primary: ##14365d;  /* blu logo */
       --secondary: #da5635; /* giallo logo */
       --accent: #ffffff;    /* bianco */
-      --black: #000000
+      --black: #000000;
     }
     body {
       margin: 0;
