--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Arial, sans-serif;
-      background: linear-gradient(90deg, var(--primary) 60%, var(--secondary) 100%);
+      background: linear-gradient(180deg, var(--primary) 50%, var(--secondary) 100%);
       min-height: 100vh;
       color: var(--accent);
     }
@@ -36,7 +36,7 @@
     }
     nav a {
       text-decoration: none;
-      color: var(--black);
+      color: rgba(255, 255, 255, 1);
       font-weight: bold;
       background: var(--primary);
       padding: 12px 18px;
@@ -96,6 +96,9 @@
   <div class="main-content">
     <h1>Benvenuti in Mast-VI</h1>
     <p>Professionalità, innovazione e qualità al servizio dei nostri clienti.</p>
+    <h1>SITO IN COSTRUZIONE</h1>
+    <p>per i tuoi progetti contattaci a</p>
+    <p>info@mast-vi.it</p>
   </div>
 </body>
 </html>
