--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <!-- Sostituisci questi colori con quelli del tuo logo -->
   <style>
     :root {
-      --primary: ##14365d;  /* blu logo */
+      --primary: #14365d;  /* blu logo */
       --secondary: #da5635; /* giallo logo */
       --accent: #ffffff;    /* bianco */
       --black: #000000;
