--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="refresh" content="0; url=/home/">
   <meta name="description" content="MAST è una startup che progetta, sviluppa e costruisce macchininari ad alto contenuto tecnologico. Contattaci: info@mast-vi.it">
 <meta name="robots" content="index, follow">
 
