--- a/home/index.html
+++ b/home/index.html
@@ -82,7 +82,7 @@
   <header>
     <div class="logo">
       <a href="Home.html">
-        <img src="home/MAST_logo_2.0_reduced.png" alt="Logo Azienda Mast-VI">
+        <img src="Assets/MAST_logo_2.0_reduced.png" alt="Logo Azienda Mast-VI">
       </a>
     </div>
     <nav>
