--- a/home/index.html
+++ b/home/index.html
@@ -81,7 +81,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="Home.html">
+      <a href="home/index.html">
         <img src="Assets/MAST_logo_2.0_reduced.png" alt="Logo Azienda Mast-VI">
       </a>
     </div>
